clusters/iam-demo-basic/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tools
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: harbor-demo
